--- a/.github/workflows/milapy.yaml
+++ b/.github/workflows/milapy.yaml
@@ -17,6 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
           python-version: "${{ matrix.python-version }}"
