--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = ["pyk <gm@pyk.sh>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.8"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.1.7"
