--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ python = ">=3.8"
 [tool.poetry.group.dev.dependencies]
 ruff = "0.1.7"
 mypy = "1.7.1"
-tomli = { version = "^2.0.1", python = "<3.11" }
+tomli = { version = "2.0.1", python = "<3.11" }
 
 [tool.poetry.group.test.dependencies]
 pytest = "7.4.3"
