--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.8"
+httpx = "0.25.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.1.7"
@@ -25,6 +26,8 @@ pytest = "7.4.3"
 [tool.ruff]
 select = ["E", "F", "I", "B", "PIE"]
 ignore = ["B904", "B028"]
+line-length = 80
+indent-width = 4
 
 [tool.ruff.isort]
 combine-as-imports = true
