--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.8"
 httpx = "0.25.2"
+pydantic = "2.5.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.1.7"
